[package]
name = "transmux"
version = "0.1.0"
authors = ["Daniel Caiafa <danielcaiafa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
twiddle = "1.1.0"
snafu = "0.6.8"

[dev-dependencies]
mockall = "0.7.1"
